# CDAC-8bit

./: README.md  analysis.py  main.py  pyproject.toml
report/: main.typ
src/cdac8bit/: __init__.py  __main__.py  analysis.py  cdac_model.py
