[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cdac8bit"
version = "0.1.0"
description = "Behavioral model of an 8-bit capacitor-based DAC (CDAC)"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.24",
    "matplotlib>=3.6",
]

[project.scripts]
cdac8bit = "cdac8bit.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]
